# mcp-qt-translation

./: CHANGELOG.md  POTENTIAL_ISSUES.md  README.md  USAGE.md  pyproject.toml
examples/: example_usage.md  translation_workflow.md
qt_translation_mcp/: __init__.py  __main__.py  git_collector.py  logger.py  server.py  translation_table.py  ts_parser.py  ts_updater.py
qt_translation_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
